envs/staging/vs-patch.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: hello
spec:
  http:
  - name: http
    route:
    - destination:
        host: hello-stable-staging.mesh-lab-staging.svc.cluster.local
        port:
          number: 80
      weight: 100
    - destination:
        host: hello-canary-staging.mesh-lab-staging.svc.cluster.local
        port:
          number: 80
      weight: 0
